# mobilefacenet_ncnn

./: CMakeLists.txt  README.md
src/: main.cpp  mobilefacenet.cpp
